# fastsy

./: alembic.ini  backend_pre_start.py  books.db  prestart.py  prestart.sh  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: b234875266ab_add_book_and_author_tables.py  f136e211e64c_add_book_and_author_tables.py  fc599bfea3a1_add_book_and_author_tables.py
app/: authors.py  backend_pre_start.py  books.py  helpers.py  initial_data.py  main.py
app/dal/: __init__.py  base.py  dal_author.py  dal_book.py
app/db/: __init__.py  base.py  base_class.py  init_db.py  session.py
app/models/: author.py  book.py  book_author.py
app/schemas/: __init__.py  author.py  book.py
app/templates/: index.html
models/: book.py
schemas/: book.py
