[tool.poetry]
name = "fastsy"
version = "0.1.0"
description = "Fast API test environment"
authors = ["Vincent Ramdhanie <vramdhanie@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = "^0.30.1"
pydantic = {extras = ["email"], version="^2.8.2"}
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
tenacity = "^8.5.0"
greenlet = "^3.0.3"